code25_all/scala/3586044.txt
Long
java.lang.Comparable[Long]
T
T <: java.lang.Comaparable[Long]
Predef
implicit def longWrapper (x: Long) : RichLong
RichLong
java.lang.Comparable[Long]
T
T <: java.lang.Comaparable[Long]
Long
java.lang.Comparable[Long]
scala> def test[T <: java.lang.Comparable[Long]](c: T) = println(c)
test: [T <: java.lang.Comparable[Long]](c: T)Unit

scala> test(12L)
<console>:7: error: inferred type arguments [Long] do not conform to method test's type parameter bounds [T <: java.lang
.Comparable[Long]]
       test(12L)
       ^

scala> test(longWrapper(12L))
12

